complete base.html

--- a/public/base.html
+++ b/public/base.html
@@ -53,10 +53,10 @@
         <div class="row">
             <div class="col-9"></div>
 
-            <div class="col-3">
+            <aside id="aside-info" class="col-3">
                 <h2>Популярные теги</h2>
                 <div class="bg-light shadow-sm" id="tags-container">
-                    <ul class="d-flex d-inline-flex">
+                    <ul class="tags-list">
                         <li><a href="#">Django</a></li>
                         <li><a href="#">numpy</a></li>
                         <li><a href="#">Flask</a></li>
@@ -65,19 +65,19 @@
 
                 <h2>Лучшие пользователи</h2>
                 <div class="bg-light shadow-sm" id="best-users-container">
-                    <ul class="d-flex d-inline-flex">
+                    <ul>
                         <li><a href="#">van_rossum_1956</a></li>
                         <li><a href="#">lutz_2k20</a></li>
                         <li><a href="#">let_robots_reign</a></li>
                     </ul>
                 </div>
-            </div>
+            </aside>
 
         </div>
     </div>
 </main>
 
-<footer class="page-footer">
+<footer class="page-footer bg-light footer">
     <div class="footer-copyright text-center">
         <span class="text-muted">Автор: Алексей Зотов, АПО-13</span>
     </div>
