login and signup

--- a/public/ask.html
+++ b/public/ask.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
-        <a id="main_label" class="navbar-brand" href="#">
+        <a id="main_label" class="navbar-brand" href="index.html">
             <div>
                 <h1 id="site-title">AskPython</h1>
                 <img src="../static/img/python_logo.png" alt="Логотип"/>
@@ -54,13 +54,13 @@
         <div class="row mt-3">
             <div class="col-9 pr-5">
                 <h2>Создать вопрос</h2>
-                <div class="container bg-light shadow-sm">
+                <div class="container bg-light shadow-sm mb-3">
                     <form id="create-form">
                         <div class="form-group row p-3">
                             <label for="input-title" class="col-sm-3 col-form-label">Заголовок вопроса</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" id="input-title"
-                                       placeholder="Введите заголовок">
+                                       maxlength="100" placeholder="Введите заголовок">
                                 <em id="invalid-title" class="invalid-input">Заполните это поле</em>
                             </div>
                         </div>
@@ -95,6 +95,12 @@
                         <li><a href="#">Django</a></li>
                         <li><a href="#">numpy</a></li>
                         <li><a href="#">Flask</a></li>
+                        <li><a href="#">MySQL</a></li>
+                        <li><a href="#">Python</a></li>
+                        <li><a href="#">Android</a></li>
+                        <li><a href="#">verylooooongtagname</a></li>
+                        <li><a href="#">iOS</a></li>
+                        <li><a href="#">Linux</a></li>
                     </ul>
                 </div>
 
