--- a/public/index_for_tag.html
+++ b/public/index_for_tag.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
-        <a id="main_label" class="navbar-brand" href="#">
+        <a id="main_label" class="navbar-brand" href="index.html">
             <div>
                 <h1 id="site-title">AskPython</h1>
                 <img src="../static/img/python_logo.png" alt="Логотип"/>
@@ -29,7 +29,7 @@
         </div>
 
         <div id="user-tools">
-            <a href="ask.html" id="ask-question" class="btn btn-outline-success btn-lg text-success">Задать вопрос</a>
+            <button id="ask-question" class="btn btn-outline-success btn-lg" type="submit">Задать вопрос</button>
             <img id="user-pic" src="../static/img/profile_pic.jpg" alt="Аватар"/>
 
             <div id="user-dropdown" class="dropdown">
@@ -54,8 +54,8 @@
         <div class="row">
             <div class="col-9 pr-5 mt-2">
                 <div class="headings">
-                    <h2>Новые вопросы</h2>
-                    <h4><a href="#">Hot questions</a></h4>
+                    <h2>Вопросы по тегу</h2>
+                    <h4><a href="#">django</a></h4>
                 </div>
                 <div class="question-card container bg-light shadow-sm">
                     <div class="row">
@@ -131,15 +131,15 @@
                 <h2>Популярные теги</h2>
                 <div class="bg-light shadow-sm" id="tags-container">
                     <ul class="tags-list">
-                        <li><a href="index_for_tag.html">Django</a></li>
-                        <li><a href="index_for_tag.html">numpy</a></li>
-                        <li><a href="index_for_tag.html">Flask</a></li>
-                        <li><a href="index_for_tag.html">MySQL</a></li>
-                        <li><a href="index_for_tag.html">Python</a></li>
-                        <li><a href="index_for_tag.html">Android</a></li>
-                        <li><a href="index_for_tag.html">verylooooongtagname</a></li>
-                        <li><a href="index_for_tag.html">iOS</a></li>
-                        <li><a href="index_for_tag.html">Linux</a></li>
+                        <li><a href="#">Django</a></li>
+                        <li><a href="#">numpy</a></li>
+                        <li><a href="#">Flask</a></li>
+                        <li><a href="#">MySQL</a></li>
+                        <li><a href="#">Python</a></li>
+                        <li><a href="#">Android</a></li>
+                        <li><a href="#">verylooooongtagname</a></li>
+                        <li><a href="#">iOS</a></li>
+                        <li><a href="#">Linux</a></li>
                     </ul>
                 </div>
 
