add links to each page

--- a/public/ask.html
+++ b/public/ask.html
@@ -84,7 +84,7 @@
                         </div>
                     </form>
 
-                    <a id="create-button" class="btn btn-success btn-lg m-3">Опубликовать</a>
+                    <a id="create-button" class="btn btn-success btn-lg m-3 text-white">Опубликовать</a>
                 </div>
             </div>
 
@@ -92,15 +92,15 @@
                 <h2>Популярные теги</h2>
                 <div class="bg-light shadow-sm" id="tags-container">
                     <ul class="tags-list">
-                        <li><a href="#">Django</a></li>
-                        <li><a href="#">numpy</a></li>
-                        <li><a href="#">Flask</a></li>
-                        <li><a href="#">MySQL</a></li>
-                        <li><a href="#">Python</a></li>
-                        <li><a href="#">Android</a></li>
-                        <li><a href="#">verylooooongtagname</a></li>
-                        <li><a href="#">iOS</a></li>
-                        <li><a href="#">Linux</a></li>
+                        <li><a href="index_for_tag.html">Django</a></li>
+                        <li><a href="index_for_tag.html">numpy</a></li>
+                        <li><a href="index_for_tag.html">Flask</a></li>
+                        <li><a href="index_for_tag.html">MySQL</a></li>
+                        <li><a href="index_for_tag.html">Python</a></li>
+                        <li><a href="index_for_tag.html">Android</a></li>
+                        <li><a href="index_for_tag.html">verylooooongtagname</a></li>
+                        <li><a href="index_for_tag.html">iOS</a></li>
+                        <li><a href="index_for_tag.html">Linux</a></li>
                     </ul>
                 </div>
 
