--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
             <div class="col-9 pr-5 mt-2">
                 <div class="headings">
                     <h2>Новые вопросы</h2>
-                    <h4><a href="#">Hot questions</a></h4>
+                    <h4><a href="#">Горячие вопросы</a></h4>
                 </div>
                 <div class="question-card container bg-light shadow-sm">
                     <div class="row">
@@ -70,11 +70,11 @@
                             </div>
                         </div>
                         <div class="col-10 right-side">
-                            <h2 class="question-title"><a href="#">Question here!</a></h2>
+                            <h2 class="question-title"><a href="question.html">Question here!</a></h2>
                             <p class="question-description">Description of a question</p>
                             <div class="answers-and-tags">
-                                <a href="#" class="link-to-answers">Ответы(3)</a>
-                                <p class="question-tags">Теги: <a href="#">django</a> <a href="#">pip</a></p>
+                                <a href="question.html" class="link-to-answers">Ответы(3)</a>
+                                <p class="question-tags">Теги: <a href="index_for_tag.html">django</a> <a href="index_for_tag.html">pip</a></p>
                             </div>
                         </div>
                     </div>
@@ -93,11 +93,11 @@
                             </div>
                         </div>
                         <div class="col-10 right-side">
-                            <h2 class="question-title"><a href="#">Question here!</a></h2>
+                            <h2 class="question-title"><a href="question.html">Question here!</a></h2>
                             <p class="question-description">Description of a question</p>
                             <div class="answers-and-tags">
-                                <a href="#" class="link-to-answers">Ответы(3)</a>
-                                <p class="question-tags">Теги: <a href="#">django</a> <a href="#">pip</a></p>
+                                <a href="question.html" class="link-to-answers">Ответы(3)</a>
+                                <p class="question-tags">Теги: <a href="index_for_tag.html">django</a> <a href="index_for_tag.html">pip</a></p>
                             </div>
                         </div>
                     </div>
@@ -116,11 +116,11 @@
                             </div>
                         </div>
                         <div class="col-10 right-side">
-                            <h2 class="question-title"><a href="#">Question here!</a></h2>
+                            <h2 class="question-title"><a href="question.html">Question here!</a></h2>
                             <p class="question-description">Description of a question</p>
                             <div class="answers-and-tags">
-                                <a href="#" class="link-to-answers">Ответы(3)</a>
-                                <p class="question-tags">Теги: <a href="#">django</a> <a href="#">pip</a></p>
+                                <a href="question.html" class="link-to-answers">Ответы(3)</a>
+                                <p class="question-tags">Теги: <a href="index_for_tag.html">django</a> <a href="index_for_tag.html">pip</a></p>
                             </div>
                         </div>
                     </div>
