--- a/public/index_for_tag.html
+++ b/public/index_for_tag.html
@@ -29,7 +29,7 @@
         </div>
 
         <div id="user-tools">
-            <button id="ask-question" class="btn btn-outline-success btn-lg" type="submit">Задать вопрос</button>
+            <a href="ask.html" id="ask-question" class="btn btn-outline-success btn-lg text-success">Задать вопрос</a>
             <img id="user-pic" src="../static/img/profile_pic.jpg" alt="Аватар"/>
 
             <div id="user-dropdown" class="dropdown">
