--- a/public/base.html
+++ b/public/base.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
-        <a id="main_label" class="navbar-brand" href="#">
+        <a id="main_label" class="navbar-brand" href="index.html">
             <div>
                 <h1 id="site-title">AskPython</h1>
                 <img src="../static/img/python_logo.png" alt="Логотип"/>
@@ -28,7 +28,7 @@
         </div>
 
         <div id="user-tools">
-            <button id="ask-question" class="btn btn-outline-success btn-lg" type="submit">Задать вопрос</button>
+            <a href="ask.html" id="ask-question" class="btn btn-outline-success btn-lg text-success">Задать вопрос</a>
             <img id="user-pic" src="../static/img/profile_pic.jpg" alt="Аватар"/>
 
             <div id="user-dropdown" class="dropdown">
@@ -57,15 +57,15 @@
                 <h2>Популярные теги</h2>
                 <div class="bg-light shadow-sm" id="tags-container">
                     <ul class="tags-list">
-                        <li><a href="#">Django</a></li>
-                        <li><a href="#">numpy</a></li>
-                        <li><a href="#">Flask</a></li>
-                        <li><a href="#">MySQL</a></li>
-                        <li><a href="#">Python</a></li>
-                        <li><a href="#">Android</a></li>
-                        <li><a href="#">verylooooongtagname</a></li>
-                        <li><a href="#">iOS</a></li>
-                        <li><a href="#">Linux</a></li>
+                        <li><a href="index_for_tag.html">Django</a></li>
+                        <li><a href="index_for_tag.html">numpy</a></li>
+                        <li><a href="index_for_tag.html">Flask</a></li>
+                        <li><a href="index_for_tag.html">MySQL</a></li>
+                        <li><a href="index_for_tag.html">Python</a></li>
+                        <li><a href="index_for_tag.html">Android</a></li>
+                        <li><a href="index_for_tag.html">verylooooongtagname</a></li>
+                        <li><a href="index_for_tag.html">iOS</a></li>
+                        <li><a href="index_for_tag.html">Linux</a></li>
                     </ul>
                 </div>
 
