--- a/public/signup.html
+++ b/public/signup.html
@@ -29,7 +29,7 @@
         </div>
 
         <div id="user-tools">
-            <button id="ask-question" class="btn btn-outline-success btn-lg" type="submit">Задать вопрос</button>
+            <a href="ask.html" id="ask-question" class="btn btn-outline-success btn-lg text-success">Задать вопрос</a>
             <img id="user-pic" src="../static/img/profile_pic.jpg" alt="Аватар"/>
 
             <div id="user-dropdown" class="dropdown">
@@ -63,7 +63,7 @@
                                                 class="fas fa-envelope"></i></span></label>
                                     </div>
                                     <input id="user-email" class="form-control" placeholder="Почта"
-                                           maxlength="100" type="email">
+                                           maxlength="50" type="email">
                                 </div>
                             </div>
 
@@ -74,7 +74,7 @@
                                                 class="fas fa-user"></i></span></label>
                                     </div>
                                     <input id="user-login" class="form-control" placeholder="Логин"
-                                           maxlength="100" type="text">
+                                           maxlength="30" type="text">
                                 </div>
                             </div>
 
@@ -101,9 +101,9 @@
                             </div>
 
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary btn-block">Создать аккаунт</button>
+                                <a href="index.html" class="btn btn-primary btn-block">Создать аккаунт</a>
                             </div>
-                            <p class="text-center"><a href="#" class="btn btn-link">Уже есть аккаунт, войти</a></p>
+                            <p class="text-center"><a href="login.html" class="btn btn-link">Уже есть аккаунт, войти</a></p>
                         </form>
                     </div>
                 </div>
@@ -115,15 +115,15 @@
                 <h2>Популярные теги</h2>
                 <div class="bg-light shadow-sm" id="tags-container">
                     <ul class="tags-list">
-                        <li><a href="#">Django</a></li>
-                        <li><a href="#">numpy</a></li>
-                        <li><a href="#">Flask</a></li>
-                        <li><a href="#">MySQL</a></li>
-                        <li><a href="#">Python</a></li>
-                        <li><a href="#">Android</a></li>
-                        <li><a href="#">verylooooongtagname</a></li>
-                        <li><a href="#">iOS</a></li>
-                        <li><a href="#">Linux</a></li>
+                        <li><a href="index_for_tag.html">Django</a></li>
+                        <li><a href="index_for_tag.html">numpy</a></li>
+                        <li><a href="index_for_tag.html">Flask</a></li>
+                        <li><a href="index_for_tag.html">MySQL</a></li>
+                        <li><a href="index_for_tag.html">Python</a></li>
+                        <li><a href="index_for_tag.html">Android</a></li>
+                        <li><a href="index_for_tag.html">verylooooongtagname</a></li>
+                        <li><a href="index_for_tag.html">iOS</a></li>
+                        <li><a href="index_for_tag.html">Linux</a></li>
                     </ul>
                 </div>
 
