--- a/public/question.html
+++ b/public/question.html
@@ -70,7 +70,7 @@
                             <h2 class="question-title">Question here!</h2>
                             <p class="question-description">Description of a question</p>
                             <div class="answers-and-tags">
-                                <p class="question-tags">Теги: <a href="#">django</a> <a href="#">pip</a></p>
+                                <p class="question-tags">Теги: <a href="index_for_tag.html">django</a> <a href="index_for_tag.html">pip</a></p>
                             </div>
                         </div>
                     </div>
