--- a/public/signup.html
+++ b/public/signup.html
@@ -49,13 +49,12 @@
 
 <main>
     <div class="container">
-        <div class="row">
+        <div class="row pb-3">
             <div class="col-5" id="login-card">
                 <div class="card">
                     <div class="card-body">
                         <h3 class="card-title text-center mb-4 mt-1">Регистрация</h3>
-                        <em id="invalid-content" class="invalid-input">Заполните это поле</em>
-                        <form>
+                        <form action="index.html" class="needs-validation" novalidate>
                             <div class="form-group">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -63,7 +62,10 @@
                                                 class="fas fa-envelope"></i></span></label>
                                     </div>
                                     <input id="user-email" class="form-control" placeholder="Почта"
-                                           maxlength="50" type="email">
+                                           maxlength="50" type="email" required>
+                                    <div class="invalid-feedback">
+                                        Введите корректный email
+                                    </div>
                                 </div>
                             </div>
 
@@ -74,7 +76,10 @@
                                                 class="fas fa-user"></i></span></label>
                                     </div>
                                     <input id="user-login" class="form-control" placeholder="Логин"
-                                           maxlength="30" type="text">
+                                           maxlength="30" type="text" required>
+                                    <div class="invalid-feedback">
+                                        Заполните это поле
+                                    </div>
                                 </div>
                             </div>
 
@@ -85,7 +90,10 @@
                                                 class="fas fa-lock"></i></span></label>
                                     </div>
                                     <input id="user-password" class="form-control" placeholder="Пароль"
-                                           maxlength="20" type="password">
+                                           maxlength="20" type="password" required>
+                                    <div class="invalid-feedback">
+                                        Заполните это поле
+                                    </div>
                                 </div>
                             </div>
 
@@ -96,14 +104,18 @@
                                                 class="fas fa-lock"></i></span></label>
                                     </div>
                                     <input id="user-repeat-password" class="form-control" placeholder="Повторите пароль"
-                                           maxlength="20" type="password">
+                                           maxlength="20" type="password" required>
+                                    <div class="invalid-feedback">
+                                        Заполните это поле
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <a href="index.html" class="btn btn-primary btn-block">Создать аккаунт</a>
+                                <button class="btn btn-primary btn-block" type="submit">Создать аккаунт</button>
                             </div>
-                            <p class="text-center"><a href="login.html" class="btn btn-link">Уже есть аккаунт, войти</a></p>
+                            <p class="text-center"><a href="login.html" class="btn btn-link">Уже есть аккаунт, войти</a>
+                            </p>
                         </form>
                     </div>
                 </div>
@@ -157,6 +169,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/d8773369b4.js" crossorigin="anonymous"></script>
+<script src="../static/js/validation.js"></script>
 
 </body>
 </html>
