--- a/public/question.html
+++ b/public/question.html
@@ -40,7 +40,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="user-menu">
                     <a class="dropdown-item" href="#">Профиль</a>
-                    <a class="dropdown-item" href="#">Настройки</a>
+                    <a class="dropdown-item" href="settings.html">Настройки</a>
                     <a class="dropdown-item" href="#">Выйти</a>
                 </div>
             </div>
