--- a/public/settings.html
+++ b/public/settings.html
@@ -53,15 +53,15 @@
             <div class="col-5" id="login-card">
                 <div class="card">
                     <div class="card-body">
-                        <h3 class="card-title text-center mb-4 mt-1">Войти в аккаунт</h3>
-                        <form action="index.html" class="needs-validation" novalidate>
+                        <h3 class="card-title text-center mb-4 mt-1">Изменить данные</h3>
+                        <form action="index.html" enctype="multipart/form-data" class="needs-validation" novalidate>
                             <div class="form-group">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <label for="user-login" class="input-group-text"><span><i
-                                                class="fas fa-user"></i></span></label>
+                                        <label for="user-email" class="input-group-text"><span><i
+                                                class="fas fa-envelope"></i></span></label>
                                     </div>
-                                    <input id="user-login" class="form-control" placeholder="Почта или логин"
+                                    <input id="user-email" class="form-control" placeholder="Почта"
                                            maxlength="50" type="email" required>
                                     <div class="invalid-feedback">
                                         Введите корректный email
@@ -72,11 +72,11 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <label for="user-password" class="input-group-text"><span><i
-                                                class="fas fa-lock"></i></span></label>
+                                        <label for="user-login" class="input-group-text"><span><i
+                                                class="fas fa-user"></i></span></label>
                                     </div>
-                                    <input id="user-password" class="form-control" placeholder="*******"
-                                           maxlength="20" type="password" required>
+                                    <input id="user-login" class="form-control" placeholder="Логин"
+                                           maxlength="30" type="text" required>
                                     <div class="invalid-feedback">
                                         Заполните это поле
                                     </div>
@@ -84,10 +84,24 @@
                             </div>
 
                             <div class="form-group">
-                                <button class="btn btn-primary btn-block" type="submit">Войти</button>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <label for="user-avatar" class="input-group-text"><span><i
+                                                class="fas fa-image"></i></span></label>
+                                    </div>
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="user-avatar" required>
+                                        <label class="input-group-text custom-file-label" for="user-avatar">Изменить аватар</label>
+                                    </div>
+                                    <div class="invalid-feedback">
+                                        Выберите файл
+                                    </div>
+                                </div>
                             </div>
-                            <p class="text-center"><a href="#" class="btn btn-light">Забыли пароль?</a></p>
-                            <p class="text-center"><a href="signup.html" class="btn btn-link">Создать аккаунт</a></p>
+
+                            <div class="form-group mt-5">
+                                <button class="btn btn-primary btn-block" type="submit">Сохранить</button>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -142,6 +156,7 @@
         crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/d8773369b4.js" crossorigin="anonymous"></script>
 <script src="../static/js/validation.js"></script>
+<script src="../static/js/signup.js"></script>
 
 </body>
 </html>
